# somanet_msgs

./: CMakeLists.txt  package.xml
msg/: ButtonsLedsStates.msg  BuzzerMelody.msg  ErrorStates.msg  Info.msg  LED.msg  LEDMap.msg  MotorControllerStates.msg  MotorStates.msg  PowerOutputControl.msg  SensorControl.msg  SensorStatesV1.msg  SensorStatesV2.msg  SetMotorSpeeds.msg  SmartBatteryStatus.msg
