<?xml version="1.0"?>
<package>
  <name>somanet_msgs</name>
  <version>0.1.1</version>
  <description>
    Message for the Somanet node
  </description>
  <author>Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>Yujin Robot</license>
  <url type="bugtracker">https://github.com/yujinrobot/somanet_msgs/issues</url>
  <url type="repository">https://github.com/yujinrobot/somanet_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
